--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="indicator">#B52E2E</color>
     <color name="hint">#656464</color>
     <color name="text_clr">#303030</color>
+    <color name="row_hint">#BEFDF7</color>
+
 </resources>
