--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="indicator">#009688</color>
     <color name="hint">#656464</color>
     <color name="text_clr">#303030</color>
-    <color name="row_hint">#BEFDF7</color>
+    <color name="row_hint">#D8F6F3</color>
     <color name="color_view_dark">#DFE5FF</color>
     <color name="_F4F4F5">#F4F4F5</color>
 </resources>
